add task start trigger

--- a/src/Activity/ActivityBundle/Resources/views/Activity/text-show.html.twig
+++ b/src/Activity/ActivityBundle/Resources/views/Activity/text-show.html.twig
@@ -1,1 +1,7 @@
-{{activity.content|raw}}
+{% extends 'TopxiaWebBundle::blank-layout.html.twig' %}
+
+{% set script_controller = 'activitybundle/controller/activity/text-show' %}
+
+{% block content %} 
+	{{activity.content|raw}}
+{% endblock %}
