--- a/src/Topxia/AdminBundle/Resources/views/System/performance-setting.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/performance-setting.html.twig
@@ -1,6 +1,6 @@
 {% extends 'TopxiaAdminBundle::layout.html.twig' %}
 
-{% set menu = 'admin_performance' %}
+{% set menu = 'admin_setting_message' %}
 
 {% block main %}
 
