--- a/src/Topxia/AdminBundle/Resources/views/Default/system.status.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/system.status.html.twig
@@ -1,20 +1,20 @@
 <ul class="subfield-list four-subfield clearfix">
   <li>
-    <h3>系统版本</h3>
+    <div class="title">系统版本</div>
     <div class="info">
       <span class="glyphicon glyphicon-ok-sign text-success"></span>
       <span class="text-lg">7.1.1</span>
     </div>
   </li>
   <li>
-    <h3>网校应用</h3>
+    <div class="title">网校应用</div>
     <div class="info">
       <span class="glyphicon glyphicon-info-sign text-danger"></span>
       <a class="text-lg link-underline text-danger" href="">2个未更新</a>
     </div>
   </li>
   <li>
-    <h3>教育云服务</h3>
+    <div class="title">教育云服务</div>
     <div class="info">
       <span class="glyphicon glyphicon-info-sign text-danger"></span>
       <span class="status-card-warp">
@@ -49,7 +49,7 @@
     </div>
   </li>
   <li>
-    <h3>移动客户端</h3>
+    <div class="title">移动客户端</div>
     <div class="info">
       <span class="glyphicon glyphicon-ok-sign text-success"></span>
       <span class="text-lg">已开启</span>
