--- a/src/Topxia/WebBundle/Resources/views/Course/Part/normal-header.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/Part/normal-header.html.twig
@@ -77,12 +77,16 @@
 
 
       {% if not member %}
+        {% if course.buyExpireTime %}
+          <p class="expiry-date hidden-sm">{{ '购买截止日期: '|trans }}{{ course.buyExpireTime|date('Y-m-d H:i') }}</p>
+        {% endif %}
+
         {% if course.expiryDay %}
           <p class="expiry-date hidden-sm">
             {% if course.expiryMode|default(null) == 'date' %}
-              {{'有效期至: '|trans}}{{course.expiryDay|date('Y-m-d H:i')}}
+              {{'学习有效期至: '|trans}}{{course.expiryDay|date('Y-m-d H:i')}}
             {% else %}
-              {{'有效期: '|trans}} {{course.expiryDay}}{{'天'|trans}}
+              {{'学习有效期: '|trans}} {{course.expiryDay}}{{'天'|trans}}
             {% endif %}
           </p>
         {% endif %}
@@ -108,9 +112,6 @@
           {% endif %}
         {% endif %}
 
-        {% if course.buyExpireTime %}
-          <span class="text-danger text-xs">{{ '购买截止日期'|trans }}:{{ course.buyExpireTime|date('Y-m-d') }}</span>
-        {% endif %}
       {% endif %}
 
     </div>
