--- a/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
@@ -78,7 +78,7 @@
                 </button>
               </div>
             </div>
-            <h3 class="panel-title">{{ '学习人次统计'|trans }}</h3>
+            <h3 class="panel-title">{{ '人次统计'|trans }}</h3>
           </div>
           <div class="panel-body js-statistic-areas" id="study-count-statistic"
                data-url="{{ path('admin_study_statistic', {period: 'week'}) }}" style="height:320px;">
