--- a/src/Topxia/AdminBundle/Resources/views/Default/system.status.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/system.status.html.twig
@@ -33,7 +33,7 @@
       <span class="glyphicon glyphicon-info-sign text-danger"></span>
       <span class="status-card-warp">
         {% if   cloudServiceCount > 0 %}
-          <a class="text-lg link-underline text-danger" href="">
+          <a class="text-lg link-underline text-success" href="">
           {{ cloudServiceCount }}个未开启
         </a>
         {% else %}
