--- a/src/Topxia/WebBundle/Resources/views/Review/Widget/list.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Review/Widget/list.html.twig
@@ -36,16 +36,19 @@
         {{ web_macro.user_avatar(user, '', 'avatar-sm') }}
       </div>
       <div class="media-body thread-post">
-        <div class="title">{{ web_macro.user_link(user) }} {{ review.createdTime|date('Y-m-d') }} {% if review.updatedTime %}{{'追评'|trans}}{% endif %}</div>
+        <div class="title">{{ web_macro.user_link(user) }} 
+          {% if review.meta %}<span>{{'完成进度'|trans}}:{{ review.meta.learnedNum }}/{{ review.meta.lessonNum}}</span>{% endif %}&nbsp;&nbsp;
+          {{ review.createdTime|date('Y-m-d') }} 
+        </div>
         <div class="score">
           {{ web_macro.star(review.rating) }}
         </div>
         <div class="content">
           <div class="short-content">{{ review.content|sub_text(100) }}
-            {% if review.updatedTime %}<span>({{'追评'|trans}})</span>{% endif %}
+            {% if review.updatedTime %}<span class="label label-success">{{'追评'|trans}}</span>{% endif %}
           </div>
           <div class="full-content" style="display:none;">{{ review.content|nl2br }}
-            {% if review.updatedTime %}<span>({{'追评'|trans}})</span>{% endif %}
+            {% if review.updatedTime %}<span class="label label-success">{{'追评'|trans}}</span>{% endif %}
           </div>
         </div>
         <div class="actions clearfix">
