--- a/src/Topxia/AdminBundle/Resources/views/Default/Parts/course-explore-table.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/Parts/course-explore-table.html.twig
@@ -12,7 +12,7 @@
       <td>{{ loop.index }}</td>
       <td>
         <a class="link-primary"
-           href="{{ path('course_show',{id: memberCount.courseId}) }}">{{ courses[ memberCount.courseId].title }}</a>
+           target="_blank" href="{{ path('course_show',{id: memberCount.courseId}) }}">{{ courses[ memberCount.courseId].title }}</a>
       </td>
       <td class="pull-right prl">{{ memberCount.count }}</td>
     </tr>
