增加正在加载中的样式提示

--- a/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
@@ -57,7 +57,7 @@
       </div>
       <div class="panel-body js-statistic-areas" id="user-statistic"
            data-url="{{ path('admin_user_statistic', {period: 'week'}) }}" style="height:320px;">
-
+        <div class="empty">{{ '正在载入数据，请稍等。'|trans }}</div>
       </div>
     </div>
 
