修复video-watermark-image twig 显示bug

--- a/src/Topxia/WebBundle/Resources/views/Marker/player.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/player.html.twig
@@ -13,7 +13,7 @@
   </div>
   <div class="manage-player-content" id="lesson-video-content" data-role="lesson-content" {% if setting('storage.video_watermark') >
     0 and setting('storage.video_watermark_image') %}
-      data-watermark="{{ filepath(setting('storage.video_watermark_image'), null, true) }}"
+      data-watermark="{{ filepath(setting('storage.video_watermark_image'), null) }}"
     {% endif %}
     {% if setting('storage.video_fingerprint') and app.user %}
       data-fingerprint="{{ finger_print() }}"
