--- a/src/MaterialLib/MaterialLibBundle/Resources/views/Player/global-video-player.html.twig
+++ b/src/MaterialLib/MaterialLibBundle/Resources/views/Player/global-video-player.html.twig
@@ -23,7 +23,7 @@
         data-agent-in-white-list="{{agentInWhiteList}}"
         data-balloon-video-player="1"
         {% if not params.watermarkOpened|default(false) == 'hidden' and not file.directives.watermarks|default(0) and setting('storage.video_watermark') > 0 and setting('storage.video_watermark_image') %}
-          data-watermark="{{ fileurl(setting('storage.video_watermark_image'), null, true) }}"
+          data-watermark="{{ fileurl(setting('storage.video_watermark_image'), null) }}"
         {% endif %}
         {% if setting('storage.cloud_access_key') %}
           data-access-key="{{ setting('storage.cloud_access_key') }}"
