--- a/src/Topxia/WebBundle/Resources/views/CourseLesson/preview-modal.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseLesson/preview-modal.html.twig
@@ -21,7 +21,7 @@
           {% endif %}
           data-player-url="{{path('course_lesson_player', {courseId:lesson.courseId, lessonId:lesson.id, isPreview:1, hideQuestion: 1})}}"
           {% if setting('storage.video_watermark') and setting('storage.video_watermark_image') %}
-            data-watermark="{{ file_url(setting('storage.video_watermark_image'), null, true) }}"
+            data-watermark="{{ file_url(setting('storage.video_watermark_image'), null) }}"
           {% endif %}
           {% if setting('storage.video_fingerprint') and app.user %}
             data-fingerprint="{{ url('cloud_video_fingerprint', {userId:app.user.id}) }}"
