--- a/src/Topxia/WebBundle/Resources/views/Player/show.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Player/show.html.twig
@@ -33,7 +33,7 @@
           data-player="{{player}}"
           data-agentInWhiteList="{{agentInWhiteList}}"
           {% if not file.convertParams.hasVideoWatermark|default(0) and setting('storage.video_watermark') > 0 and setting('storage.video_watermark_image') %}
-            data-watermark="{{ fileurl(setting('storage.video_watermark_image'), null, true) }}"
+            data-watermark="{{ fileurl(setting('storage.video_watermark_image'), null) }}"
           {% endif %}
           {% if setting('storage.cloud_access_key') %}
             data-access-key="{{ setting('storage.cloud_access_key') }}"
