--- a/src/CourseTask/TaskBundle/Resources/views/TaskManage/modal.html.twig
+++ b/src/CourseTask/TaskBundle/Resources/views/TaskManage/modal.html.twig
@@ -1,6 +1,7 @@
 {% extends 'TopxiaWebBundle::bootstrap-modal-layout.html.twig' %}
 
-{% set modalSize = 'large' %}
+{% set modal_class= "modal-md" %}
+
 
 {% block title %}
 	{% if activity|default(false) %}
@@ -11,39 +12,56 @@
 {% endblock %}
 
 {% block body %}
-
-	{% if not currentType|default(false) and not activity|default(false) %}
-		{% for type, value in activityTypes  %}
-			<a data-role="activityType" href="javascript:;" data-url="{{path('course_manage_task_create',{courseId:courseId, currentType:type})}}">{{value.name}}</a>
-		{% endfor %}
-	{% endif %}
-
-
-	{% if currentType|default(false) %}
-		<form id='task-create-form' class="form-horizontal" method="POST" 
-		{% if activity|default(false) %}
-		action="{{path('course_manage_task_update',{courseId:courseId, id:task.id})}}"
-		{% else %}
-		action="{{path('course_manage_task_create',{courseId:courseId, currentType:currentType})}}"
+	<div class="course-tasks-modal">
+		<ul class="es-step es-step-2 clearfix js-es-step">
+			<li class="doing">
+				<span class="number">1</span>
+				选择教学手段
+			</li>
+			<li>
+				<span class="number">2</span>
+				设置内容
+			</li>
+		</ul>
+		<ul class="course-tasks-type row">
+		{% if not currentType|default(false) and not activity|default(false) %}
+			{% for type, value in activityTypes  %}
+			<li class="col-xs-3 course-tasks-type-item js-tasks-type-item">
+				<a data-role="activityType" data-type="{{type}}" href="javascript:;" data-url="{{path('course_manage_task_create',{courseId:courseId, currentType:type})}}">
+				<i class="es-icon es-icon-graphicclass"></i>
+				看{{value.name}}
+				</a>
+			</li>
+			{% endfor %}
 		{% endif %}
-		>
-			<input type="hidden" name="id" value="{{task.id|default('')}}">
-            <input type="hidden" name="mediaType" value='{{currentType}}'>
-            <input type="hidden" name="fromCourseSetId" value='1'>
-			<input type="hidden" name="fromCourseId" value='{{courseId}}'>
-			{% include activityTypes[currentType]['create_modal'] %}
-		</form>
-	{% endif %}
+		</ul>
 
+		{% if currentType|default(false) %}
+			<form id='task-create-form' class="form-horizontal" method="POST" 
+			{% if activity|default(false) %}
+			action="{{path('course_manage_task_update',{courseId:courseId, id:task.id})}}"
+			{% else %}
+			action="{{path('course_manage_task_create',{courseId:courseId, currentType:currentType})}}"
+			{% endif %}
+			>
+				<input type="hidden" name="id" value="{{task.id|default('')}}">
+	      <input type="hidden" name="mediaType" value='{{currentType}}'>
+	      <input type="hidden" name="fromCourseSetId" value='1'>
+				<input type="hidden" name="fromCourseId" value='{{courseId}}'>
+				{% include activityTypes[currentType]['create_modal'] %}
+			</form>
+		{% endif %}
+	</div>
 {% endblock %}
 
 
 {% block footer %}
-	{% if currentType|default(false) %}
+	
+		<button type="submit" class="btn btn-primary js-task-prev-step disabled" data-url="{{ path('course_manage_task_create', {courseId:1}) }}">{{'上一步'|trans}}</button>
+		<button type="submit" class="btn btn-primary js-task-next-step disabled" >{{'下一步'|trans}}</button>
+  	{#<button type="button" class="btn btn-link" data-dismiss="modal">{{'取消'|trans}}</button>#}
+		{% if currentType|default(false) %}
 		<button id="task-create-form-submit" type="submit" class="btn btn-primary pull-right" data-toggle="form-submit" data-target="#task-create-form" data-submiting-text="{{'正在保存...'|trans}}" >{{'保存'|trans}}</button>
-	{% endif %}
-
-  	<button type="button" class="btn btn-link pull-right" data-dismiss="modal">{{'取消'|trans}}</button>
-
+		{% endif %}
   	<script>app.load('taskbundle/controller/task-manage/create')</script>
 {% endblock %}
