--- a/src/Topxia/WebBundle/Resources/views/CourseManage/layout.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseManage/layout.html.twig
@@ -158,7 +158,7 @@
         <ul class="list-group">
           <li class="list-group-heading">{{'教学计划'|trans}}</li>
           <li class="list-group-item {% if side_nav == 'task' %}active{% endif %}">
-            {#<a href="{{path('task',{id:course.id})}}">#}
+           <a href="">
               <span></span>{{'教学计划管理'|trans}}</a>
           </li>
         </ul>
