--- a/web/assets/v2/less/component/es-step.less
+++ b/web/assets/v2/less/component/es-step.less
@@ -4,6 +4,9 @@
   &.es-step-3 li {
     width: 33.33%;
   }
+  &.es-step-2  li {
+    width: 50%;
+  }
   li {
     float: left;
     padding: 15px;
