--- a/web/assets/v2/less/main.less
+++ b/web/assets/v2/less/main.less
@@ -121,7 +121,8 @@
 // @import "page/settings.less";             //用户设置页
 // @import "page/live.less";                 //直播课程页
 // @import "page/message.less";              //私信
-// @import "page/notification.less";         //通知    
+// @import "page/notification.less";         //通知  
+@import "page/learn-task.less";  
 
 
 @import "page/live-course.less";             //直播页面            
