--- a/web/assets/v2/less/temp.less
+++ b/web/assets/v2/less/temp.less
@@ -208,6 +208,10 @@ a.link-muted {
   width: 25px;
 }
 
+.testpaper-question-stem-material{
+  margin-left: 50px;
+}
+
 .panel.testpaper-question-block .testpaper-question{
   position: relative;
 
